LOGS/.ipynb_checkpoints/DL_PREDICT-checkpoint.err
rm: cannot remove '/p/project/cesmtst/patakchiyousefi1/PREDICT_FILES/*': No such file or directory
  File "/p/project/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/DL_PREDICT.py", line 61
    model_path = PPROJECT_DIR2 + HPT_path "/" + training_unique_name + '.h5'
                                          ^^^
SyntaxError: invalid syntax
srun: error: jwb0164: task 0: Exited with exit code 1
  File "/p/project/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/DL_PREDICT.py", line 61
    model_path = PPROJECT_DIR2 + HPT_path "/" + training_unique_name + '.h5'
                                          ^^^
SyntaxError: invalid syntax
srun: error: jwb0164: task 0: Exited with exit code 1
